testsuite/tests/typecheck/should_fail/ExplicitSpecificity9.hs
{-# LANGUAGE ScopedTypeVariables #-}
{-# LANGUAGE StandaloneDeriving #-}
module Bug where

data T a = MkT
deriving instance forall {a}. Show (T a)
